--- a/app/src/main/res/layout/fragment_home_post_show.xml
+++ b/app/src/main/res/layout/fragment_home_post_show.xml
@@ -37,10 +37,9 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/roundshape_white_bg"
-            android:gravity="center"
-            android:hint="search by area or division"
-            android:paddingStart="10dp"
-            android:textAlignment="viewStart"
+            android:gravity="start|center"
+            android:hint="@string/hint_search_by_area_division_id"
+            android:padding="5dp"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
