--- a/app/src/main/res/layout/activity_post_details_show.xml
+++ b/app/src/main/res/layout/activity_post_details_show.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,7 +16,6 @@
             android:id="@+id/gridLayout"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:layout_marginTop="12dp"
             android:alignmentMode="alignMargins"
             android:columnCount="5"
             android:columnOrderPreserved="false"
@@ -34,8 +34,9 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_margin="5dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/icon_lift" />
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_lift"
+                android:visibility="visible" />
 
             <ImageView
                 android:id="@+id/imageview_wifi"
@@ -44,7 +45,7 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_margin="5dp"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:src="@drawable/icon_wifi" />
 
             <ImageView
@@ -54,7 +55,7 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_margin="5dp"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:src="@drawable/icon_security" />
 
             <ImageView
@@ -64,8 +65,8 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_margin="5dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/icon_wifi" />
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_home_cleaning" />
 
             <ImageView
                 android:id="@+id/imageview_generatior"
@@ -74,8 +75,8 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_margin="5dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/icon_lift" />
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon_generator" />
 
         </GridLayout>
 
@@ -93,7 +94,6 @@
             android:layout_width="0dp"
             android:layout_height="300dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/rent_type_picture"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -105,7 +105,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:text="Rent Home: 1 Bed ! Bath 1 Kitchen"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +123,8 @@
             android:id="@+id/tv_location_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mohammadpur, Dhaka"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
             app:layout_constraintTop_toTopOf="@+id/imageView3" />
@@ -143,33 +143,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="3rd Floor"
             android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="@+id/imageView4"
             app:layout_constraintStart_toEndOf="@+id/imageView4"
             app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
         <TextView
-            android:id="@+id/textView14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Side View: North Side"
-            android:textColor="@android:color/black"
-            app:layout_constraintStart_toStartOf="@+id/imageView4"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-
-        <TextView
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:padding="5dp"
-            android:text="15000 TK/Month"
             android:textColor="@android:color/black"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/textView14"
-            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+            app:layout_constraintStart_toStartOf="@+id/imageView4"
+            app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
         <TextView
             android:id="@+id/textView16"
@@ -184,27 +173,19 @@
             app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
         <Button
-            android:id="@+id/button_call_now"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/roundshape_yellow_bg"
-            android:text="@string/call_now"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/gridLayout"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
-
-        <Button
             android:id="@+id/button_details"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/roundshape_green_bg"
             android:text="@string/details"
-            app:layout_constraintBottom_toBottomOf="@+id/button_call_now"
-            app:layout_constraintStart_toEndOf="@+id/button_call_now"
-            app:layout_constraintTop_toTopOf="@+id/button_call_now" />
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/gridLayout"
+            app:layout_constraintStart_toStartOf="@+id/gridLayout"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
