--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -15,7 +15,7 @@
             android:id="@+id/textInputLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/roundshape_white_bg"
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="@+id/textInputLayout12"
@@ -29,7 +29,10 @@
                 <EditText
                     android:id="@+id/et_mobile_no"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
+                    android:background="@null"
+                    android:padding="5dp"
+                    android:paddingStart="20dp"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/button_verify"
@@ -39,10 +42,12 @@
                 <Button
                     android:id="@+id/button_verify"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:background="@drawable/roundshape_green_bg"
                     android:text="@string/verified"
                     android:textColor="@color/colorWhite"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/et_mobile_no"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -51,21 +56,6 @@
 
 
         </com.google.android.material.textfield.TextInputLayout>
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/circularImageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/icon_profile"
-            app:civ_border_color="@color/colorYellow"
-            app:civ_border_width="2dp"
-            app:civ_shadow="true"
-            app:civ_shadow_color="#000000"
-            app:civ_shadow_radius="2dp"
-            app:layout_constraintEnd_toEndOf="@+id/home_textView"
-            app:layout_constraintStart_toStartOf="@+id/home_textView"
-            app:layout_constraintTop_toBottomOf="@+id/home_textView"
-            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/home_textView"
@@ -84,29 +74,31 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout12"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/roundshape_white_bg"
-            android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/circularImageView">
+            app:layout_constraintTop_toBottomOf="@+id/home_textView">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_owner_name"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/owner_name" />
+                android:layout_height="50dp"
+                android:background="@null"
+                android:hint="@string/owner_name"
+                android:padding="5dp"
+                android:paddingStart="20dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout8"
-            android:layout_width="379dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/roundshape_white_bg"
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
@@ -116,15 +108,18 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_reference_code"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/reference_code" />
+                android:layout_height="50dp"
+                android:background="@null"
+                android:hint="@string/reference_code"
+                android:padding="5dp"
+                android:paddingStart="20dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="379dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="50dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/roundshape_yellow_bg"
             android:text="@string/create_account_button"
