--- a/app/src/main/res/layout/fragment_ads_from1.xml
+++ b/app/src/main/res/layout/fragment_ads_from1.xml
@@ -59,7 +59,7 @@
         <GridLayout
             android:id="@+id/gridLayout"
             android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:alignmentMode="alignMargins"
             android:columnCount="5"
@@ -134,7 +134,9 @@
                 android:id="@+id/et_post_tittle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/write_tittle" />
+                android:background="@null"
+                android:hint="@string/write_month"
+                android:padding="10dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -152,13 +154,15 @@
                 android:id="@+id/et_postal_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/postal_code" />
+                android:background="@null"
+                android:hint="@string/postal_code"
+                android:padding="10dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/button_go_next"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/roundshape_yellow_bg"
@@ -213,7 +217,9 @@
                 android:id="@+id/et_post_area"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_area_name" />
+                android:background="@null"
+                android:hint="@string/hint_area_name"
+                android:padding="10dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
