--- a/app/src/main/res/layout/sampleview_admin_home_post.xml
+++ b/app/src/main/res/layout/sampleview_admin_home_post.xml
@@ -88,8 +88,8 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="dhaka ,barshal"
-            android:textColor="@color/colorGreen"
-            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_home_rent_price"
@@ -104,7 +104,7 @@
             android:padding="5dp"
             android:text="@string/sold"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/button_delete"
             app:layout_constraintEnd_toStartOf="@+id/button_delete"
@@ -114,16 +114,26 @@
             android:id="@+id/button_delete"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/roundshape_red_bg"
             android:padding="5dp"
             android:text="@string/delete"
             android:textColor="@color/colorWhite"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_sampleview_address"
+            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="TextView"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tv_sampleview_address"
             app:layout_constraintTop_toBottomOf="@+id/tv_sampleview_address" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
