--- a/app/src/main/res/layout/sampleview_home_post_item.xml
+++ b/app/src/main/res/layout/sampleview_home_post_item.xml
@@ -18,6 +18,8 @@
             android:id="@+id/zoominimageview_item_photo"
             android:layout_width="0dp"
             android:layout_height="200dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ambulance_c"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +34,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:padding="5dp"
-            android:text="1 Bed, 2 Bath, 3 Balcony"
             android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="@+id/zoominimageview_item_photo"
             app:layout_constraintStart_toStartOf="@+id/zoominimageview_item_photo"
@@ -43,7 +44,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="March"
             android:textColor="@android:color/holo_blue_dark"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="@+id/home_description"
@@ -55,12 +55,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="12000 TK/Month"
             android:textColor="@android:color/black"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/tv_home_rent_from" />
+            app:layout_constraintStart_toStartOf="@+id/tv_sampleview_address"
+            app:layout_constraintTop_toBottomOf="@+id/tv_sampleview_address" />
 
         <TextView
             android:id="@+id/textView3"
@@ -87,10 +86,20 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="dhaka ,barshal"
-            android:textColor="@color/colorGreen"
-            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/tv_home_rent_from" />
+
+        <TextView
+            android:id="@+id/tv_ads_code"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textAlignment="textStart"
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_home_rent_price"
