--- a/app/src/main/res/layout/sampleview_youtube_video.xml
+++ b/app/src/main/res/layout/sampleview_youtube_video.xml
@@ -6,7 +6,7 @@
 
     <WebView
         android:id="@+id/webview"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
