--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="colorRed">#F44336</color>
     <color name="colorGreen">#4CAF50</color>
+    <color name="colorShadow">#D6D5D4</color>
 </resources>
